hphp/test/slow/reassign_this/1490.php.expectf
Fatal error: Invalid use of `$this`: it cannot be re-assigned in %s/test/slow/reassign_this/1490.php on line 6